testsuite/tests/patsyn/should_compile/ImportSyntax.hs
{-# LANGUAGE PatternSynonyms #-}
module ImportSyntax (A(.., B)) where

data A = A

pattern B = A
