testsuite/tests/patsyn/should_fail/export-ps-rec-sel.hs
{-# LANGUAGE PatternSynonyms #-}
module Foo( R(P,x)) where

data Q = Q Int

data R = R

pattern P{x} = Q x
